Fix the spacing

--- a/css/custom.css
+++ b/css/custom.css
@@ -52,4 +52,5 @@
   .card {
     border-radius: 16px;
     background-color: rgba(255,255,255,0.6);
+    margin-left: 20px;
   }
